--- a/Image Editor/Image Editor.csproj
+++ b/Image Editor/Image Editor.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColorMatixForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ColorMatixForm.Designer.cs">
+      <DependentUpon>ColorMatixForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +60,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="ColorMatixForm.resx">
+      <DependentUpon>ColorMatixForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
