--- a/Image Editor/Image Editor.csproj
+++ b/Image Editor/Image Editor.csproj
@@ -82,11 +82,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Slider.cs">
+    <Compile Include="ColorSliderForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Slider.Designer.cs">
-      <DependentUpon>Slider.cs</DependentUpon>
+    <Compile Include="ColorSliderForm.Designer.cs">
+      <DependentUpon>ColorSliderForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="AboutForm.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
@@ -107,8 +107,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Slider.resx">
-      <DependentUpon>Slider.cs</DependentUpon>
+    <EmbeddedResource Include="ColorSliderForm.resx">
+      <DependentUpon>ColorSliderForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
